# DUONG-GIA-HUY_DECK17_LV2_Project1

./: .env  .gitignore  README.md  environment.yml  pseudo.psc  pyproject.toml
data/: source_topic_messages.json
scripts/: consumer_to_mongodb.py  setup.py  streaming_data_from_source.py
src/kafka_project/core/: config.py  json_processing.py  logger.py
src/kafka_project/kafka/: consumer.py  producer.py  topic.py
