[project]
name = "kafka-project"
version = "0.1.0"
description = ""
authors = [
    {name = "huy-dg",email = "duongghuy96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "confluent-kafka (>=2.12.1,<3.0.0)",
    "pymongo (>=4.15.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "kafka_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true 

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_errors = true